--- a/hERG_activity/readme
+++ b/hERG_activity/readme
@@ -1,1 +1,14 @@
+hERG, also known as human Ether-à-go-go Related Gene, refers to a specific gene that encodes a potassium ion channel in humans. This ion channel plays a crucial role in regulating the flow of potassium ions across cell membranes, particularly in the heart.
+
+The hERG channel is essential for maintaining the normal rhythm of the heart. Mutations or abnormalities in the hERG gene can lead to a condition known as Long QT Syndrome (LQTS), which is a rare but potentially life-threatening heart disorder. LQTS can result in irregular heartbeats (arrhythmias) that can lead to fainting, seizures, or even sudden cardiac arrest.
+
+Scientists and researchers study hERG channels extensively, especially in the context of drug development. Certain medications can interfere with hERG channels, potentially leading to dangerous side effects, such as QT prolongation and arrhythmias. As a result, pharmaceutical companies rigorously test new drugs for their impact on hERG channels to ensure they are safe for use.
+
+n the context of drug development and pharmacology, the term "hERG active" refers to molecules that have the potential to interact with the hERG potassium ion channel in a way that could lead to cardiac arrhythmias. This is a significant concern in drug development because blocking hERG channels can prolong the QT interval in an electrocardiogram (ECG), which can lead to a potentially dangerous irregular heart rhythm known as Torsades de Pointes.
+
+Conversely, "hERG inactive" molecules are compounds that do not have a significant impact on the hERG channel, meaning they are less likely to cause QT prolongation and related cardiac issues.
+
+As a result, pharmaceutical companies screen new drug candidates for their potential to be hERG active. Compounds that show a high likelihood of interacting with the hERG channel in a way that could lead to cardiac issues are generally considered less favorable for further development.
+
+It's important to note that while hERG activity is a crucial factor in drug safety, it's not the only one. Other factors, such as efficacy and interactions with other targets in the body, are also taken into account when evaluating the overall safety and suitability of a drug candidate.
 
